--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@expo/cli": "^0.10.17",
-    "@expo/metro-config": "~0.17.0",
+    "@expo/metro-config": "^0.17.8",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -32,18 +32,19 @@
     "expo-system-ui": "~5.0.0",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.79.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.0",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.0",
     "undici": "^6.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.0",
+    "@types/react": "^19.0.0",
     "@types/react-native": "^0.72.0",
     "baseline-browser-mapping": "^2.9.0",
     "eslint": "^8.50.0",
